<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add"
        android:gravity="bottom|left"
        android:textColor="@android:color/background_light"
        android:background="@color/red"
        android:paddingTop="@dimen/fab_size_normal"
        android:paddingBottom="@dimen/appbar_elevation"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/tab_min_width"
        android:textSize="@dimen/dialog_title_text"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_text_size"
        android:text="@string/dialog_enter"/>
    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_text_size"
        android:text="@string/dialog_choose"/>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/red_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red_str"
            />
        <RadioButton
            android:id="@+id/orange_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orange"/>
        <RadioButton
            android:id="@+id/yellow_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow"/>
        <RadioButton
            android:id="@+id/green_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green"/>
        <RadioButton
            android:id="@+id/light_blue_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_blue"/>
        <RadioButton
            android:id="@+id/blue_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue"/>
        <RadioButton
            android:id="@+id/purple_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purple"/>
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right">
        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cancel"
            />
        <Button
            android:id="@+id/dialog_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Add"
            />
    </LinearLayout>
</LinearLayout>